--- a/teste.html
+++ b/teste.html
@@ -7,11 +7,11 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <!-- we use cors proxy to avoid cross-origin problems -->
-        <a-box position="0 0.5 0" color="blue">
-            <a-animation attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite" easing="linear">
-
-            </a-animation>
-        </a-box>
+        <!-- <a-box position="0 0.5 0" color="cyan" 
+        animation="property: rotation; to: 360 360; loop: true; easing: linear"
+        animation__2="property: object3D.position.y; to: 1.4; dir: alternate; dur: 2000; loop: true">
+      
+        </a-box> -->
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
